--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -4,7 +4,7 @@
     "build": "next build",
     "dev": "next dev --turbopack",
     "start": "next start",
-    "prisma:seed": "ts-node --compiler-options \"{\\\"module\\\":\\\"CommonJS\\\"}\" prisma/seed.ts"
+    "prisma:seed": "ts-node --project prisma/tsconfig.seed.json prisma/seed.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
@@ -14,7 +14,7 @@
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "next": "latest",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "^4.24.7",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
     "react": "latest",
@@ -39,6 +39,6 @@
     ]
   },
   "prisma": {
-    "seed": "pnpm prisma:seed"
+    "seed": "ts-node --project prisma/tsconfig.seed.json prisma/seed.ts"
   }
 }
