--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -10,21 +10,27 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "6.12.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/redis": "^1.35.1",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.6",
+    "jsdom": "^26.1.0",
     "next": "latest",
     "next-auth": "^4.24.7",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
     "react": "latest",
     "react-dom": "latest",
+    "server-only": "^0.0.1",
     "tailwindcss": "3.4.17",
     "use-debounce": "^10.0.4",
     "zod": "^3.25.17"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/dompurify": "^3.2.0",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
