--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -19,11 +19,14 @@
     "jsdom": "^26.1.0",
     "next": "latest",
     "next-auth": "^4.24.7",
+    "nodemailer": "^7.0.5",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
     "react": "latest",
     "react-dom": "latest",
+    "recharts": "^3.1.0",
     "server-only": "^0.0.1",
+    "sharp": "^0.34.3",
     "tailwindcss": "3.4.17",
     "use-debounce": "^10.0.4",
     "zod": "^3.25.17"
@@ -32,6 +35,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/dompurify": "^3.2.0",
     "@types/node": "22.10.7",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
     "prisma": "^6.12.0",
