--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "6.12.0",
     "@tailwindcss/forms": "^0.5.10",
     "@upstash/ratelimit": "^2.0.5",
@@ -24,6 +25,7 @@
     "postgres": "^3.4.6",
     "react": "latest",
     "react-dom": "latest",
+    "react-hook-form": "^7.61.1",
     "recharts": "^3.1.0",
     "server-only": "^0.0.1",
     "sharp": "^0.34.3",
