--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -26,6 +26,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.61.1",
+    "react-icons": "^5.5.0",
     "recharts": "^3.1.0",
     "server-only": "^0.0.1",
     "sharp": "^0.34.3",
