--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -30,6 +30,7 @@
     "recharts": "^3.1.0",
     "server-only": "^0.0.1",
     "sharp": "^0.34.3",
+    "sonner": "^2.0.6",
     "tailwindcss": "3.4.17",
     "use-debounce": "^10.0.4",
     "zod": "^3.25.17"
