--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -11,6 +11,10 @@
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "6.12.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@tiptap/extension-placeholder": "^3.0.7",
+    "@tiptap/extension-underline": "^3.0.7",
+    "@tiptap/react": "^3.0.7",
+    "@tiptap/starter-kit": "^3.0.7",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.1",
     "autoprefixer": "10.4.20",
@@ -18,6 +22,7 @@
     "clsx": "^2.1.1",
     "dompurify": "^3.2.6",
     "jsdom": "^26.1.0",
+    "lucide-react": "^0.534.0",
     "next": "latest",
     "next-auth": "^4.24.7",
     "nodemailer": "^7.0.5",
