--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -38,7 +38,8 @@
     "sonner": "^2.0.6",
     "tailwindcss": "3.4.17",
     "use-debounce": "^10.0.4",
-    "zod": "^3.25.17"
+    "zod": "^3.25.17",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
