--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/dompurify": "^3.2.0",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "22.10.7",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "19.0.7",
