--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -17,14 +17,17 @@
     "@tiptap/starter-kit": "^3.0.7",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.1",
+    "@vercel/blob": "^1.1.1",
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "dompurify": "^3.2.6",
     "jsdom": "^26.1.0",
     "lucide-react": "^0.534.0",
     "next": "latest",
     "next-auth": "^4.24.7",
+    "next-cloudinary": "^6.16.0",
     "nodemailer": "^7.0.5",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
