--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -45,6 +45,7 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@types/bcrypt": "^5.0.2",
     "@types/dompurify": "^3.2.0",
     "@types/jsdom": "^21.1.7",
